# sakuhiki

./: Cargo.toml  Justfile  README.md  shell.nix
.github/workflows/: ci.yml  release-plz.yml
crates/sakuhiki/: CHANGELOG.md  Cargo.toml
crates/sakuhiki-core/: CHANGELOG.md  Cargo.toml
crates/sakuhiki-core/src/: backend.rs  datum.rs  db.rs  end_index.rs  errors.rs  index.rs  indexer.rs  lib.rs  mode.rs
crates/sakuhiki-index-btree/: CHANGELOG.md  Cargo.toml
crates/sakuhiki-index-btree/src/: fixed_len.rs  index.rs  key.rs  lib.rs  query.rs  tests.rs
crates/sakuhiki-indexed-db/: CHANGELOG.md  Cargo.toml
crates/sakuhiki-indexed-db/src/: lib.rs
crates/sakuhiki-memdb/: CHANGELOG.md  Cargo.toml
crates/sakuhiki-memdb/src/: lib.rs
crates/sakuhiki-rocksdb/: CHANGELOG.md  Cargo.toml
crates/sakuhiki-rocksdb/src/: builder.rs  cf.rs  db.rs  error.rs  lib.rs  transaction.rs
crates/sakuhiki/src/: backend.rs  db.rs  lib.rs
