[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
authors = ["Leo Gaspard <leo@casmic.fr>"]
categories = [
    "asynchronous",
    "database-implementations",
    "database",
    "web-programming",
    "wasm",
]
description = "Indexing overlay for any key-value store"
edition = "2024"
homepage = "https://github.com/Ekleog/sakuhiki"
keywords = ["database", "async", "web", "native"]
license = "MIT OR Apache-2.0"
readme = "./README.md"
repository = "https://github.com/Ekleog/sakuhiki"
# Remember to update the ci.yml file when updating this
rust-version = "1.85.0"

[workspace.dependencies]
sakuhiki-core = { path = "crates/sakuhiki-core" }
sakuhiki-index-btree = { path = "crates/sakuhiki-index-btree" }
sakuhiki-indexed-db = { path = "crates/sakuhiki-indexed-db" }
sakuhiki-memdb = { path = "crates/sakuhiki-memdb" }
sakuhiki-rocksdb = { path = "crates/sakuhiki-rocksdb" }

async-lock = "3.4"
futures-util = "0.3.31"
indexed-db = "0.4.2"
rocksdb = "0.23.0"
thiserror = "2.0"
waaa = "0.2.0"
