[package]
name = "sakuhiki-core"
version = "0.0.1-alpha.1"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
eyre.workspace = true
futures-util.workspace = true
thiserror.workspace = true
waaa.workspace = true
