[package]
name = "sakuhiki-index-btree"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
sakuhiki-core.workspace = true

async-stream.workspace = true
waaa.workspace = true

[dev-dependencies]
sakuhiki-memdb.workspace = true

tokio = { workspace = true, features = ["macros", "rt"] }
