[package]
name = "sakuhiki-rocksdb"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
sakuhiki-core.workspace = true

anyhow.workspace = true
rocksdb.workspace = true
thiserror.workspace = true
waaa.workspace = true
