[package]
name = "sakuhiki-rocksdb"
version = "0.0.1-alpha.0"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
sakuhiki-core.workspace = true

derive_more.workspace = true
eyre.workspace = true
rocksdb.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
thiserror.workspace = true
waaa.workspace = true
