[package]
name = "sakuhiki"
version = "0.0.1-alpha.0"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
index-btree = ["sakuhiki-index-btree"]

[dependencies]
sakuhiki-core.workspace = true

sakuhiki-index-btree = { workspace = true, optional = true }
